<resources>
    <string name="app_name">NITMZ-S</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Create a Password</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go to Login</string>
    <string name="go_to_register">Go to Register</string>
    <string name="logout">LogOut</string>
    <string name="nit_mizoram">National Institute Of Technology\nMizoram</string>
    <string name="mizoram">Mizoram</string>
    <string name="get_started">Continue to App</string>
    <string name="tnc">By Continuing You Agree our</string>
    <string name="privacy"><u>Terms Of Services &amp; Privacy Policy</u></string>
    <string name="developer">Developer</string>
    <string name="don_t_have_a_account_register">Don`t have an account?</string>
    <string name="name">Name</string>
    <string name="roll_number">Roll Number</string>
    <string name="termsandc">Terms &amp; Conditions</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_possibilities"><![CDATA[< Explore Possibilities >]]></string>
    <string name="societies"><![CDATA[< Societies >]]></string>
    <string name="clubs"><![CDATA[< Fests & Clubs >]]></string>
    <string name="alumini_s"><![CDATA[< Alumini`s >]]></string>
    <string name="past_recruiters"><![CDATA[< Past Recruiters >]]></string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="css_aim">Our aim is to provide a wide range of social, tech and careers activities for all; enabling our members to get to know each other, relax, and enjoy themselves in a friendly environment. We host events such as quizzes, hackathons, tech talks, and workshops. Alongside this, we are active in maintaining links with industry to help you prepare for the world outside of the Institute       </string>
    <string name="https_bit_ly_2yoj77h">https://bit.ly/2YoJ77H</string>
    <string name="update_possiblities"><![CDATA[< Update Possibilities >]]></string>
    <string name="update_socities"><![CDATA[< Update Societies >]]></string>
    <string name="dinner"><![CDATA[< Dinner >]]></string>
    <string name="snacks"><![CDATA[< Snacks >]]></string>
    <string name="lunch"><![CDATA[< Lunch >]]></string>
    <string name="breakfast"><![CDATA[< Breakfast >]]></string>
    <string name="updatewarning">"Update everything accurately, as it significantly impacts many students."</string>
    <string name="bus_number_is_required">Bus Number is Required</string>
    <string name="bus_time_is_required">Bus Time is Required</string>
    <string name="please_select_from">Please Select From</string>
    <string name="please_select_to">Please Select To</string>
    <string name="computer_science_engineering"><![CDATA[Computer Science & Engineering,]]></string>
    <string name="csetext1">The Dept. of CSE is amongst the three first departments which started during the inception of the\nInstitute at VNIT Nagpur in the year 2010 with only under graduate programme. Later Master\ndegree started in the year 2018. Doctoral programme has also started from the year 2015. The\ndepartment is one of the most sought for departments amongst the students which has seen many\ncolors in terms of academic performance and placement over the years. Students of the\ndepartment are often selected for internships with reputed universities of Germany, IITs among\nmany others as well as in Software firms. The department manages the Institute network\ninfrastructure along with the ERP system and Website.</string>
    <string name="csef1"><![CDATA[Assistant Professor & HOD\nNatural Language Processing,\nMachine Learning, Deep Learning\nEmail: sandeep.cse@nitmz.ac.in]]></string>
    <string name="csef2">Assistant Professor\nNatural Language Processing\nEmail: lenin.cse@nitmz.ac.in</string>
    <string name="csef3">Assistant Professor\nSocial Robot, Deep Learning,\nArtificial Intelligent, Computer Vision\nEmail: vaibhav.cse@nitmz.ac.in</string>
    <string name="csef4">Assistant Professor\nWireless networks, Communication\nEmail: lalhruaizela.cse@nitmz.ac.in</string>
    <string name="csef5">Assistant Professor (on-lien)\nSocial Robot, Deep Learning,\nArtificial Intelligent, Computer Vision\nEmail: rdas@nitmz.ac.in</string>
    <string name="csef6">Assistant Professor\nArtificial Intelligence, Computer Vision,\nSemantic Web, Multi-access Edge Computing\nEmail: ashish.cse@nitmz.ac.in</string>
    <string name="csef7">Temporary Faculty\nQuantum Computing, Image processing,\nSteganograpy\nEmail: lalengmawia.cse@nitmz.ac.in</string>
    <string name="institxt1">(An Institution of National Importance under Ministry of Education (Shiksha Mantralaya), Govt. of India)</string>
    <string name="institxt2">The Ministry of Human Resources Development, Government of India, through its orders numbered F. 23–13–2009 TS-III dated October 30, 2009, and March 3, 2010, made the decision to establish ten new National Institutes of Technology (NITs). In accordance with this directive, NIT Mizoram commenced its journey in 2010 within the state of Mizoram, dedicated to providing education, conducting research, and offering training programs leading to degrees in B.Tech, M.Tech, M.Sc., and Ph.D. Recognizing its significance, the institute has been conferred the status of an Institute of National Importance through an Act of Parliament.\n\nAdmission to NIT Mizoram is conducted through the All India Entrance Exam-Joint Entrance Exam (JEE Mains), ensuring a competitive and merit-based selection process.\n\nSituated amidst the breathtaking scenery of Mizoram, NIT Mizoram is surrounded by clouds and mountain rocks, enhancing its natural beauty. Mizoram, with a remarkable literacy rate of 91%, stands as one of the most educated states in our country, providing a peaceful and conducive environment for academic pursuits.\n\nTo meet the demands of the ever-evolving academic landscape, the institute is equipped with state-of-the-art laboratories housing the latest equipment and cutting-edge software installations. This commitment to modern infrastructure ensures that NIT Mizoram remains at the forefront of educational excellence, preparing students to face the challenges of the contemporary world.</string>
    <string name="institxt3">1).To serve the societal needs of the country in particular and the world in general through\nachieving excellence in innovative scientific and technical education and cutting edge research.\n2). To impart and enhance quality technical and scientific education to young men and\nwomen.\n3). To serve the societal needs of the country in particular and the world in general through\nachieving excellence in innovative scientific and technical education and cutting edge research.\n</string>
    <string name="institxt4">1). To impart and enhance quality technical and scientific education to young men and women.\n2). To promote all fields of innovations and provide support to the entrepreneurs.\n3). To promote all fields of innovations and provide support to the entrepreneurs</string>
    <string name="institxt5"><![CDATA[1).To offer modern Under Graduate (UG) Programmes in various branches of Engineering, viz., Computer Science & Engineering, Electronics & Communication Engineering, Electrical Engineering, Mechanical Engineering, Civil Engineering, Mathematics and Computing, etc.\n2).To comprehend enriched Post Graduate (PG) Programmes in Computer Science & Engineering, Electronics & Communication Engineering, Electrical Engineering, Mechanical Engineering, Civil Engineering, while initiate for new PG programmes in Mathematics, Physics, Chemistry, Humanities and Social Sciences, MBA, etc.\n3).To introduce new (5 year) dual-degree programme BTech-MTech from all the existing Departments of BTech after completion of their 3rd year for MTech specialization in Computational Nanotechnology and Semiconductors and also in Data Sciences.\n4).To provide facilities for research in all Engineering Departments, Basic and Applied Sciences, Humanities and Social Sciences and also in the most imminent Interdisciplinary areas leading to Doctoral Degrees.]]></string>
    <string name="institxt6">NIT Mizoram began its journey in 2009 to achieve global renown in research and education.Since 2009, the Institute has progressed rapidly. Presently, there are about 850 students studying in various disciplines of Engineering, Sciences, Humanities and Social Sciences. The Institute is working untiringly to impart quality education that keeps pace with the latest advances in research and development activities.\n\nWe have signed an MOU with IIT Madras on academic and research activities, exchange of academic information, scholarly information, materials, and publications, exchange of students and faculty, and sponsorship of cooperative seminars, workshops, and other academic meetings from 2022–23. The top 11 students from each Department have continued their B. Tech final years at IIT Madras and 2 students are ready to continue their PhD at IIT Madras.\n\nThe year 2021 saw an increase of over 60 students. From 18th to 19th June 2022, NIT Mizoram organized FICTA 2022. Our faculty and research scholars have published in reputed journals including Nature and won several awards including best paper awards in international conferences. Dr. S. Vipej Devi, faculty member of Civil Engineering Department has won the prestigious postdoctoral industrial fellowship granted by IGSTC in 2022. NIT Mizoram is organizing ICMEET 2023 as an International Conference with Springer publishing house for LNEE in October 2023.\n\nAt present NIT Mizoram is situated in a temporary campus at Aizawl. With the support of the state govt, we are expecting the completion of the partially completed permanent campus at Lengpui, Mizoram within the next two years with best of the facilities for the excellent academic ambience.\n\nThe faculty, students and staff of NIT Mizoram are working hard with utmost sincerity and dedication to accept the challenge of making NIT Mizoram a preferred destination for high quality learning, research and innovation. Their new initiatives will surely bear rich fruits during the years to come.</string>
    <string name="institxt7">NIT Mizoram\nChaltlang, Aizawl–796012\nMizoram, India\nTel/ Fax:0389–2391236 (o) /0389–2391774 / 0389–2391699\nE-Mail : registraroffice@nitmz.ac.in</string>
    <string name="todo">TODO</string>
    <string name="developer2">Developer</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="national_institute_of_technology">National Institute Of Technology</string>
    <string name="cse_department">CSE Department</string>
    <string name="welcome_to_the_department_of">Welcome to the Department of</string>
    <string name="faculties_cse_department">Faculties @ CSE Department</string>
    <string name="dr_sandeep_kumar_dash">Dr. Sandeep Kumar Dash</string>
    <string name="dr_lenin_laitonjam">Dr. Lenin Laitonjam</string>
    <string name="dr_vaibhav_malviya">Dr. Vaibhav Malviya</string>
    <string name="dr_lalhruaizela">Dr. Lalhruaizela</string>
    <string name="dr_ranjita_das">Dr. Ranjita Das</string>
    <string name="dr_ashish_singh_patel">Dr. Ashish Singh Patel</string>
    <string name="dr_c_lalengmawia">Dr. C. Lalengmawia</string>
    <string name="the_institute">The Institute</string>
    <string name="nit_mizoram_">NIT Mizoram</string>
    <string name="vision">Vision</string>
    <string name="mission">Mission</string>
    <string name="objectives">Objectives</string>
    <string name="prof_s_sundar_director_nit_mizoram">Prof. S. Sundar (Director NIT Mizoram)</string>
    <string name="message_from_director_s_desk">Message from Director’s Desk</string>
    <string name="address">Address</string>
</resources>