<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".TheInstitute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/rectangle"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/backbtn"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@color/darkBlue"
                android:contentDescription="@string/todo"
                android:src="@drawable/backbtn"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <TextView
                android:text="@string/the_institute"
                android:textSize="23sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/convergence"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="@string/nit_mizoram_"
                android:textSize="40sp" />

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="-15dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/institxt1" />

            <ImageView
                android:src="@drawable/nitmz_admin"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="50dp"
                android:scaleType="fitXY"
                android:layout_height="400dp"
                android:contentDescription="@string/todo" />


            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/institxt2" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="@string/vision"
                android:textSize="30sp" />

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/institxt3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="@string/mission"
                android:textSize="30sp" />

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/institxt4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="@string/objectives"
                android:textSize="30sp" />

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/institxt5" />

            <ImageView
                android:src="@drawable/director"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="50dp"
                android:scaleType="fitXY"
                android:layout_height="200dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:text="@string/prof_s_sundar_director_nit_mizoram"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="@string/message_from_director_s_desk"
                android:textSize="25sp" />

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/institxt6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="@string/address"
                android:textSize="30sp" />

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/institxt7" />



        </LinearLayout>



    </ScrollView>


</LinearLayout>



