<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".CseDept">

    <LinearLayout
        android:id="@+id/linearLayout_tool"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/rectangle"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="@color/darkBlue"
            android:contentDescription="@string/todo"
            android:src="@drawable/backbtn"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <TextView
            android:text="@string/cse_department"
            android:textSize="23sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/convergence"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/cse_dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_height="200dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:text="@string/welcome_to_the_department_of"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/computer_science_engineering"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/national_institute_of_technology"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/mizoram"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/csetext1"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="19sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/faculties_cse_department"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/sandeep_sir"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <TextView
                android:text="@string/dr_sandeep_kumar_dash"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:text="@string/csef1"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:paddingHorizontal="18dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/lenin_sir"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <TextView
                android:text="@string/dr_lenin_laitonjam"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:text="@string/csef2"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:paddingHorizontal="18dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/vaibhav_sir"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <TextView
                android:text="@string/dr_vaibhav_malviya"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:text="@string/csef3"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:paddingHorizontal="18dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/zella_sir"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <TextView
                android:text="@string/dr_lalhruaizela"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:text="@string/csef4"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:paddingHorizontal="18dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/ranjita"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <TextView
                android:text="@string/dr_ranjita_das"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:text="@string/csef5"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:paddingHorizontal="18dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/ashish"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <TextView
                android:text="@string/dr_ashish_singh_patel"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:text="@string/csef6"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:paddingHorizontal="18dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/java_sir"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <TextView
                android:text="@string/dr_c_lalengmawia"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.nitmizoram.nitmz.utils.Montserrat_Regular
                android:text="@string/csef7"
                android:layout_marginHorizontal="10dp"
                android:layout_gravity="center"
                android:paddingHorizontal="18dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>